# Anki-Android-Backend

./: .gitignore  .gitmodules  Cargo.toml  README.md  bootstrap.sh  build-aar.bat  build-aar.sh  build-current.sh  build-robo.bat  build-robo.sh  build-rust.gradle  build-web-assets.gradle  build.gradle  build.gradle.kts  build.sh  check-droid.bat  check-droid.sh  check-rust.bat  check-rust.sh  gradle.properties  set-android-ndk-home.sh  settings.gradle  settings.gradle.kts  test-current.bat  test-current.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/scripts/: check_robolectric_assets.sh  install_ndk.bat  install_ndk.sh  install_ndk_macos.sh  install_rust_robolectric_targets.sh  install_rust_targets.sh  linux_install_macos_cross_compile.sh  linux_install_protobuf.sh  linux_install_x86_64-unknown-linux-gnu-gcc.sh  macos_install_protobuf_compiler.sh  macos_install_pyenv.sh  protoc_gen_deps.py
.github/workflows/: build-all.yml  build-quick.yml  build-release.yml  build.yml  ci.yml  codeql.yml  linux_build.yml  macos_build.yml  main.yml  publish_library.yml  publish_testing.yml  robolectric_build.yml  update_gradle_wrapper.yml  windows_build.yml  windows_pure_build.yml
anki/rslib/: Cargo.toml
build_rust/: Cargo.toml
build_rust/src/: main.rs
docs/: ARCHITECTURE.md  ENVIRONMENT.md  HOWTO.md  OVERVIEW.md  TESTING.md  UPDATING.md  easy-testing.md
docs/source/: sequence_method_call.plantuml  sequence_open_collection.plantuml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rsdroid/: build.gradle  proguard-rules.pro  proto.gradle
rsdroid-instrumented/: build.gradle
rsdroid-instrumented/src/androidTest/assets/: schema_16.anki2  schema_17.anki2
rsdroid-instrumented/src/androidTest/java/net/ankiweb/rsdroid/: BackendDisposalTests.java  BackendDisposalTests.kt  BackendForTesting.java  BackendForTesting.kt  BackendIntegrationTests.java  BackendIntegrationTests.kt  BackendMutexTest.java  BackendMutexTest.kt  BackendPanicTests.kt  BackendSlowTests.java  BackendSlowTests.kt  BackendTranslationsTest.java  BackendTranslationsTest.kt  Compat.java  CompatHelper.java  CompatV16.java  CompatV26.java  DatabaseIntegrationTests.java  DatabaseIntegrationTests.kt  DatabaseTransactionTests.java  DatabaseTransactionTests.kt  ExceptionTest.java  ExceptionTest.kt  InstrumentedTest.java  RustDatabaseIntegrationTests.java  RustDatabaseIntegrationTests.kt  RustDatabaseUtil.java  Shared.java
rsdroid-instrumented/src/main/: AndroidManifest.xml
rsdroid-testing/: README.md  build.gradle
rsdroid-testing/tools/: osxcross.sh  setup_macos.sh
rsdroid/src/androidTest/java/net/ankiweb/: BackendIntegrationTests.java  Compat.java  CompatHelper.java  CompatV16.java  CompatV26.java  DatabaseTransactionTests.java  ExampleInstrumentedTest.java  InstrumentedTest.java  RustDatabaseIntegrationTests.java  RustDatabaseUtil.java  Shared.java
rsdroid/src/main/: AndroidManifest.xml
rsdroid/src/main/java/net/ankiweb/rsdroid/: AnkiDroidBackendImpl.java  Backend.java  Backend.kt  BackendException.java  BackendException.kt  BackendFactory.java  BackendFactory.kt  BackendFatalError.java  BackendFatalError.kt  BackendMutex.java  BackendUtils.java  BackendUtils.kt  BackendV1.java  BackendV1.kt  BackendV11Factory.java  BackendV11Factory.kt  BackendV1Impl.java  BackendV1Impl.kt  BackendVNextFactory.java  BackendVNextFactory.kt  NativeMethods.java  NativeMethods.kt  Pointer.java  RustBackendFailedException.java  (+8 more)
rsdroid/src/test/java/net/ankiweb/: BackendSyncTest.kt  CollectionCreationTest.java  CollectionCreationTest.kt  ExampleUnitTest.java  TestUtil.java
rslib-bridge/: .gitignore  Cargo.toml  Cross.toml  build.rs  buildinfo.txt  fluent.rs  proto.rs
rslib-bridge/.cargo/: config.toml
rslib-bridge/Dockerfiles/: Dockerfile.linux  Dockerfile.windows
rslib-bridge/proto/: AdBackend.proto
rslib-bridge/src/: ankidroid.rs  dbcommand.rs  lib.rs  logging.rs  mmap64.rs  sqlite.rs
tools/: build-docker-images.sh  doctor.sh  get-buildinfo.sh  setup-python
tools/gen-fluent-proto/: gen.py  readme.md
tools/genfluent/: genfluent.bat  genfluent.py  genfluent.sh
tools/protoc-gen/: protoc-gen.bat  protoc-gen.py  protoc-gen.sh  readme.md
tools/protoc-gen/test/: backend.proto  fluent.proto  test_anki.bat
tools/web/: build-web-assets.bat  build-web-assets.ps1  build-web-assets.sh  set-bash-win.ps1
(+96 files in other folders)
