[package]
name = "build_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anki_io = { version = "0.0.0", path = "../anki/rslib/io" }
anki_process = { version = "0.0.0", path = "../anki/rslib/process" }
anyhow = "1.0.75"
camino = "1.1.6"
glob = "0.3.1"
which = "4.4.2"
