[package]
name = "build_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc="*"

[dependencies]
anki_io = { version = "0.0.0", path = "../anki/rslib/io" }
anki_process = { version = "0.0.0", path = "../anki/rslib/process" }
anyhow = "1.0.75"
camino = "1.1.6"
glob = "0.3.1"
streaming-iterator = "0.1.9"
tree-sitter = "0.24.3"
tree-sitter-svelte-ng = "1.0.2"
tree-sitter-typescript = "0.23.0"
which = "4.4.2"
