[package]
name = "rsdroid"
version = "0.1.0"
authors = ["David Allison <davidallisongithub@gmail.com>"]
edition = "2018"

[lib]
crate_type = ["dylib"]

[dependencies]
jni = { version = "0.17.0", default-features = false }
anki = { path = "../anki/rslib", features = ["rustls"] }
prost = "0.11"
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
lazy_static = "1.4.0"
num_enum = "0.5.0"
itertools = "0.10.0"
lexical-core = "0.7.5"
rusqlite = { version = "0.28.0", features = ["trace", "functions", "collation", "bundled"] }
android_logger = "0.11.0"
log = "0.4.17"
slog = "2.7.0"
gag = "1.0.0"
slog-envlogger = "2.2.0"
