[package]
name = "rsdroid"
version = "0.1.0"
authors = ["David Allison <davidallisongithub@gmail.com>"]
edition = "2018"

[lib]
crate_type = ["dylib"]

[dependencies]
jni = { version = "0.17.0", default-features = false }
anki = { path = "../anki/rslib", features = ["rustls"] }
chrono = { git = "https://github.com/ankitects/chrono.git", rev = "fd971dde70cde002dba1f9face6a32891513672c" }

prost = "0.11"
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
lazy_static = "1.4.0"
num_enum = "0.5.0"
itertools = "0.10.0"
lexical-core = "0.7.5"
rusqlite = { version = "0.28.0", features = ["trace", "functions", "collation", "bundled"] }
android_logger = "0.11.0"
log = "0.4.17"
gag = "1.0.0"
once_cell = "1.16.0"
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug", "log"] }
