[package]
name = "rsdroid"
version = "0.1.0"
authors = ["David Allison <davidallisongithub@gmail.com>"]
edition = "2018"

[lib]
crate_type = ["dylib"]

[dependencies]
anki = { path = "../anki/rslib", features = ["rustls"] }
anki_proto = { path = "../anki/rslib/proto" }

android_logger = "0.13.1"
gag = "1.0.0"
jni = { version = "0.17.0", default-features = false }
log = "0.4.17"
once_cell = "1.16.0"
prost = "0.11"
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug", "log"] }

[build-dependencies]
anki_io = { version = "0.0.0", path = "../anki/rslib/io" }
anki_process = { version = "0.0.0", path = "../anki/rslib/process" }
anki_proto_gen = { version = "0.0.0", path = "../anki/rslib/proto_gen" }

anyhow = "1.0.71"
glob = "0.3.1"
inflections = "1.1.1"
prost-reflect = "0.11.4"
prost-types = "0.11.9"
